login form js working

--- a/css/default.css
+++ b/css/default.css
@@ -18,17 +18,5 @@
 }
 
 #card-body-register {
-   /* display: none;*/
+    display: none;
 }
-/*
-.container {
-    position: relative;
-    z-index: 1;
-    max-width: 300px;
-    margin: 0 auto;
-}
-.container:before, .container:after {
-    content: "";
-    display: block;
-    clear: both;
-}*/
